--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ignore compiled java files
-/P2P-Project/bin/*
+/P2P-Project/bin/peer/*
 !/P2P-Project/bin/peer/RemotePeerInfo.class
 !/P2P-Project/bin/peer/StartRemotePeers.class
 !/P2P-Project/bin/peer/PeerInfo.cfg
