--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # ignore compiled java files
-/P2P-Project/bin/peer/*
-!/P2P-Project/bin/peer/RemotePeerInfo.class
-!/P2P-Project/bin/peer/StartRemotePeers.class
-!/P2P-Project/bin/peer/PeerInfo.cfg
-!/P2P-Project/bin/peer/peer_*
+/P2P-Project/bin/*
+!/P2P-Project/bin/RemotePeerInfo.class
+!/P2P-Project/bin/StartRemotePeers.class
