--- a/P2P-Project/PeerInfo.cfg
+++ b/P2P-Project/PeerInfo.cfg
@@ -1,3 +1,3 @@
-1001 localhost 6008 0 
-1002 localhost 6009 0 
-1003 localhost 6010 0 
+1001 sun114-11.cise.ufl.edu 6008 0 
+1002 sun114-12.cise.ufl.edu 6009 0 
+1003 sun114-13.cise.ufl.edu 6010 0 
